--- a/PROJET_FDD.ipynb
+++ b/PROJET_FDD.ipynb
@@ -6965,7 +6965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 228,
    "id": "36fec303-e6ef-4c77-9790-f5b8f8962e6c",
    "metadata": {},
    "outputs": [],
@@ -6973,43 +6973,68 @@
     " LogisticRegression_param = {\n",
     "    'C': [100, 10, 1.0, 0.1, 0.01],\n",
     "    'solver': ['newton-cg', 'lbfgs', 'liblinear'],\n",
-    "    'penalty': ['l2']\n",
+    "    'penalty': ['l2', 'l1', 'elasticnet', 'none'],\n",
+    "    'dual': [True, False],\n",
+    "    'tol': np.linspace(10**-6,10**-2,10)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 229,
    "id": "9d4d9862-9f63-4f01-81ef-ec903195c2f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = GridSearchCV(LR,LogisticRegression_param)"
+    "lr = GridSearchCV(LR,LogisticRegression_param, verbose=1, n_jobs=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 230,
    "id": "838263fc-255b-4c90-b023-3514451e1b7a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1200 candidates, totalling 6000 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    2.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 1876 tasks      | elapsed:   10.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 3746 tasks      | elapsed:   26.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 6000 out of 6000 | elapsed:   39.8s finished\n"
+     ]
+    }
+   ],
    "source": [
     "lr_best=lr.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 231,
    "id": "d1d56b9e-4d98-40d3-9d1b-c1742a302ba5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'C': 0.1, 'penalty': 'l2', 'solver': 'liblinear'}"
+       "{'C': 0.1,\n",
+       " 'dual': False,\n",
+       " 'penalty': 'l2',\n",
+       " 'solver': 'liblinear',\n",
+       " 'tol': 0.004445}"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7020,17 +7045,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 232,
    "id": "1cd22996-f6fd-422d-b30c-2158db4b0383",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7987354750512645"
+       "0.8017657780815677"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7041,7 +7066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 233,
    "id": "4d89ad11-469e-4881-ae85-ac338cc03c51",
    "metadata": {},
    "outputs": [
@@ -7051,23 +7076,13 @@
        "0.8416289592760181"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "accuracy_score(y_test, lr_best.predict(X_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "id": "23832e64-9d83-479b-9c87-85ce26b90ce9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a revoir"
    ]
   },
   {
@@ -7088,23 +7103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 234,
    "id": "92dfb391-efed-4209-8c50-d31d63f69e19",
    "metadata": {},
    "outputs": [],
    "source": [
     "randForest_param = {\n",
     "    'n_estimators': [10, 50, 100],   \n",
-    "    'max_depth': [None, 8],   \n",
-    "    'min_samples_leaf': [2, 3],   \n",
-    "    'min_samples_split': [4, 6, 8],   \n",
-    "    'max_features': ['log2', 'sqrt']  \n",
+    "    'max_depth': [None, 300, 500, 1000],   \n",
+    "    'min_samples_leaf': [1, 2, 3],   \n",
+    "    'min_samples_split': [4, 5, 6, 7, 8],   \n",
+    "    'max_features': ['log2', 'sqrt'],\n",
+    "    'criterion': ['gini', 'entropy'],\n",
+    "    'warm_start': [True, False]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 235,
    "id": "0841e285-4b50-4acb-af96-8bb21dc4edfb",
    "metadata": {},
    "outputs": [],
@@ -7114,7 +7131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 236,
    "id": "e1fd29bd-8f34-42f7-8174-8f36cda965af",
    "metadata": {},
    "outputs": [
@@ -7122,7 +7139,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 72 candidates, totalling 360 fits\n"
+      "Fitting 5 folds for each of 1440 candidates, totalling 7200 fits\n"
      ]
     },
     {
@@ -7130,9 +7147,19 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    4.9s\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:   10.0s\n",
-      "[Parallel(n_jobs=-1)]: Done 360 out of 360 | elapsed:   15.9s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:    9.2s\n",
+      "[Parallel(n_jobs=-1)]: Done 434 tasks      | elapsed:   17.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 784 tasks      | elapsed:   30.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 1234 tasks      | elapsed:   46.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 1784 tasks      | elapsed:  1.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 2434 tasks      | elapsed:  1.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 3184 tasks      | elapsed:  2.0min\n",
+      "[Parallel(n_jobs=-1)]: Done 4034 tasks      | elapsed:  2.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 4984 tasks      | elapsed:  3.1min\n",
+      "[Parallel(n_jobs=-1)]: Done 6034 tasks      | elapsed:  3.8min\n",
+      "[Parallel(n_jobs=-1)]: Done 7184 tasks      | elapsed:  4.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 7200 out of 7200 | elapsed:  4.5min finished\n"
      ]
     }
    ],
@@ -7142,21 +7169,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 237,
    "id": "c4ad9d07-858e-4ae7-a899-c278789e5557",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'max_depth': None,\n",
+       "{'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
        " 'max_features': 'sqrt',\n",
        " 'min_samples_leaf': 2,\n",
        " 'min_samples_split': 6,\n",
-       " 'n_estimators': 50}"
+       " 'n_estimators': 50,\n",
+       " 'warm_start': True}"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7167,7 +7196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 238,
    "id": "5983f838-7cf3-4461-883d-b2988132897f",
    "metadata": {},
    "outputs": [
@@ -7177,7 +7206,7 @@
        "0.8335725677830942"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7188,7 +7217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 239,
    "id": "758eb6de-1ef7-4933-93ab-e87f33e0cc3a",
    "metadata": {},
    "outputs": [
@@ -7198,7 +7227,7 @@
        "0.8235294117647058"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7209,41 +7238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "85651f23-7f3b-44d2-b7a9-4b9aac4d09b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([10, 20, 30, 40, 50, 60, 70, 80, 90])"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(10, 100, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 243,
    "id": "91e67d68-5311-4ce9-b910-bfe31470563b",
    "metadata": {},
    "outputs": [],
    "source": [
     "adaboost_param = {\n",
-    "    'n_estimators': np.arange(10, 50, 10),\n",
-    "    'learning_rate': [0.01, 0.05, 0.1, 1],\n",
+    "    'n_estimators': np.arange(10, 30, 5),\n",
+    "    'learning_rate': np.arange(0.5, 2, 0.1),\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 244,
    "id": "f6f76940-d3fe-4218-acc4-c7855e88dfb7",
    "metadata": {},
    "outputs": [],
@@ -7253,7 +7261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 245,
    "id": "77dc2e8b-6ba8-4be8-9e7c-5a67e8eee6c5",
    "metadata": {},
    "outputs": [
@@ -7261,7 +7269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n"
+      "Fitting 5 folds for each of 60 candidates, totalling 300 fits\n"
      ]
     },
     {
@@ -7269,7 +7277,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  80 out of  80 | elapsed:    1.5s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  52 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=-1)]: Done 285 out of 300 | elapsed:    3.5s remaining:    0.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 300 out of 300 | elapsed:    3.7s finished\n"
      ]
     }
    ],
@@ -7279,17 +7289,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 246,
    "id": "acc578e4-62d2-46fd-a200-872f4a5a51f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'learning_rate': 1, 'n_estimators': 20}"
+       "{'learning_rate': 0.9999999999999999, 'n_estimators': 20}"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7300,7 +7310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 247,
    "id": "0a18a415-b5ad-43c6-8eb6-24b2c98aa3cb",
    "metadata": {},
    "outputs": [
@@ -7310,7 +7320,7 @@
        "0.8018455228981545"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7321,7 +7331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 248,
    "id": "c2909939-3c63-4301-802a-273c7b5ed272",
    "metadata": {},
    "outputs": [
@@ -7331,7 +7341,7 @@
        "0.8416289592760181"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7705,6 +7715,14 @@
    ],
    "source": [
     "accuracy_score(y_test, best_df.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f4ae16b",
+   "metadata": {},
+   "source": [
+    "Ajouter comparaison scores modèle + comparaison ce que les chercheurs ont + try more regularisation parameters if possible if stuck"
    ]
   },
   {
