--- a/PROJET_FDD.ipynb
+++ b/PROJET_FDD.ipynb
@@ -6968,7 +6968,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "14c53b55",
+   "id": "a7fb322f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7099,7 +7099,7 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "id": "c01850e3",
+   "id": "db5fea8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7239,7 +7239,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "4846a17e",
+   "id": "3fadfec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7249,7 +7249,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "35bdc387",
+   "id": "6627954d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7493,7 +7493,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "e13ba309",
+   "id": "d0aa94c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7717,7 +7717,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "cad91c70",
+   "id": "8b824c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7727,7 +7727,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "f00089d8",
+   "id": "ef77e8b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7810,7 +7810,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "a8b73374",
+   "id": "a3456bbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7820,7 +7820,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "8659fd69",
+   "id": "1e0d81fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7841,7 +7841,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "4a7d4012",
+   "id": "4bf0bd35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7851,7 +7851,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "a361b2ce",
+   "id": "9794c0a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7862,7 +7862,7 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "id": "4be6331c",
+   "id": "bf6c5c79",
    "metadata": {},
    "outputs": [
     {
@@ -7970,7 +7970,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "18441011",
+   "id": "a33ed31a",
    "metadata": {},
    "outputs": [
     {
@@ -8077,7 +8077,7 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "id": "bf58485c",
+   "id": "fb6fecde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8086,8 +8086,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
-   "id": "13abba43",
+   "execution_count": 280,
+   "id": "177059a6",
    "metadata": {},
    "outputs": [
     {
@@ -8117,29 +8117,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Logistic Regression</th>\n",
-       "      <td>84.162896</td>\n",
-       "      <td>84.178487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Random Forest</th>\n",
-       "      <td>82.352941</td>\n",
-       "      <td>82.370314</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AdaBoost</th>\n",
-       "      <td>84.162896</td>\n",
-       "      <td>84.294802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SVM</th>\n",
-       "      <td>72.850679</td>\n",
-       "      <td>70.561484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RN</th>\n",
-       "      <td>82.352941</td>\n",
-       "      <td>82.431661</td>\n",
+       "      <th>Voting eclf1</th>\n",
+       "      <td>86.877828</td>\n",
+       "      <td>86.769822</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DF</th>\n",
@@ -8147,14 +8127,34 @@
        "      <td>86.396693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Voting eclf1</th>\n",
-       "      <td>86.877828</td>\n",
-       "      <td>86.769822</td>\n",
+       "      <th>AdaBoost</th>\n",
+       "      <td>84.162896</td>\n",
+       "      <td>84.294802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logistic Regression</th>\n",
+       "      <td>84.162896</td>\n",
+       "      <td>84.178487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Voting eclf2</th>\n",
        "      <td>83.710407</td>\n",
        "      <td>83.676032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RN</th>\n",
+       "      <td>82.352941</td>\n",
+       "      <td>82.431661</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>82.352941</td>\n",
+       "      <td>82.370314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SVM</th>\n",
+       "      <td>72.850679</td>\n",
+       "      <td>70.561484</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -8162,14 +8162,14 @@
       ],
       "text/plain": [
        "                      Accuracy   F1_score\n",
-       "Logistic Regression  84.162896  84.178487\n",
-       "Random Forest        82.352941  82.370314\n",
-       "AdaBoost             84.162896  84.294802\n",
-       "SVM                  72.850679  70.561484\n",
-       "RN                   82.352941  82.431661\n",
-       "DF                   86.425339  86.396693\n",
        "Voting eclf1         86.877828  86.769822\n",
-       "Voting eclf2         83.710407  83.676032"
+       "DF                   86.425339  86.396693\n",
+       "AdaBoost             84.162896  84.294802\n",
+       "Logistic Regression  84.162896  84.178487\n",
+       "Voting eclf2         83.710407  83.676032\n",
+       "RN                   82.352941  82.431661\n",
+       "Random Forest        82.352941  82.370314\n",
+       "SVM                  72.850679  70.561484"
       ]
      },
      "metadata": {},
@@ -8181,7 +8181,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -8197,10 +8197,17 @@
     }
    ],
    "source": [
-    "df_final.sort_values(by='F1_score',ascending=False)\n",
-    "display(df_final)\n",
+    "display(df_final.sort_values(by='F1_score',ascending=False))\n",
     "df_final.plot.barh(y=[\"Accuracy\",\"F1_score\"],figsize=(14,15))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2c4fee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
