les imports mis en haut

--- a/PROJET_FDD.ipynb
+++ b/PROJET_FDD.ipynb
@@ -10,8 +10,20 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "\n",
-    "import matplotlib.pyplot as plt "
+    "import matplotlib.pyplot as plt \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import  confusion_matrix, accuracy_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+    "from sklearn import svm\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.preprocessing import StandardScaler \n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.ensemble import VotingClassifier"
    ]
   },
   {
@@ -4959,7 +4971,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
@@ -4969,16 +4980,6 @@
    "metadata": {},
    "source": [
     "### Regression Logistique"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "0d0ad6e2-e2f9-4ecd-af48-6cc1594e52cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import  confusion_matrix, accuracy_score"
    ]
   },
   {
@@ -4999,7 +5000,7 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "LR = LogisticRegression(random_state=42,max_iter=1000)\n",
     "LR.fit(X_train,y_train)\n"
    ]
@@ -5073,7 +5074,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "RF = RandomForestClassifier(random_state=42)\n",
     "RF.fit(X_train, y_train)"
    ]
@@ -5225,16 +5225,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "fd87e583-d6d3-473d-9a7b-c2bcf1d22348",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn import svm"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 86,
    "id": "fecd0213-e0b6-41c3-a1fb-1b53a3d4e9c7",
    "metadata": {},
@@ -5325,16 +5315,6 @@
    "metadata": {},
    "source": [
     "### Reseaux de neurones "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "f892fe18-ba39-4e17-98f0-898ced40cd42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
@@ -5441,16 +5421,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "5e1b2131-b958-4d70-94cd-840117f35b2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 96,
    "id": "573cb08a-270e-4684-809f-f6fd2cccabe5",
    "metadata": {},
@@ -5545,16 +5515,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "10401127-a536-41fa-b5b9-68946e51c1f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import GradientBoostingClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 101,
    "id": "49749b78-fa13-4505-bfd5-f5b38bc36264",
    "metadata": {},
@@ -5645,16 +5605,6 @@
    "metadata": {},
    "source": [
     "### KNN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "8e378137-214b-427c-8b4f-b8e7bb5e7913",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -5767,8 +5717,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler \n",
-    "\n",
     "ss= StandardScaler()\n",
     "X_train_ss= ss.fit_transform(X_train)\n",
     "X_val_ss = ss.transform(X_val)"
@@ -6508,17 +6456,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "a9c9ce68-36ba-434a-82e0-47ea6e414ea9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import f1_score\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 148,
    "id": "dc534188-78b8-45c1-a9f2-924ecce3d0db",
    "metadata": {},
@@ -7025,14 +6962,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42929a59-34b7-4626-9645-d8e060ecb0c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e0358043-ea07-49e5-866a-e476e82e9b21",
    "metadata": {},
    "outputs": [],
@@ -7256,14 +7185,6 @@
    "source": [
     "f1_dict_ss"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b56066c8-2a82-4def-ae88-425c76d66bd4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -7542,46 +7463,6 @@
     "f1_dict_ss[\"Adaboost\"]=f1score*100\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77303a6c-fb67-4dc8-bd37-7486466c8ef4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8579b774-430f-46fb-a7c4-edc3ff7eaea8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f65a7151-fab5-4a03-b8f3-837698b58761",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8a05078-aa07-4a7f-af19-081e2152a1e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f1bfc02-a26b-42de-9039-f5de1950dc21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -7871,30 +7752,6 @@
     "f1score = f1_score(y_val, svm_best_ss.predict(X_val_ss), average='weighted')\n",
     "f1_dict_ss[\"SVM\"]=f1score*100"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c571d29-c046-41ad-8526-341832aa15fc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4562fdb-cfdf-469c-b43c-d91d90763c59",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f2500bd-1f97-4674-be7e-3a2864e3eae0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -8575,7 +8432,6 @@
     "    \"min_samples_leaf\": np.linspace(0.1, 0.5, 5),\n",
     "    \"max_depth\":[3,5,8],\n",
     "    \"max_features\":[None,\"log2\",\"sqrt\"],\n",
-    "    \"criterion\": [\"friedman_mse\",  \"absolute_error\"]\n",
     "    }"
    ]
   },
@@ -9311,7 +9167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import VotingClassifier\n",
+    "\n",
     "\n",
     "clf1 = LogisticRegression(**lr.best_params_,random_state=42)\n",
     "clf2 = RandomForestClassifier(**rf.best_params_,random_state=42)\n",
